--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,8 +68,8 @@ nav li a {
 	border: 5px solid white;
 	text-align: center;
 	align-content: center;
-	margin: 50px 600px;
-	padding: 17px;
+	margin: 4% 41%;
+	padding: 1%;
 }
 
 .projects {
@@ -99,6 +99,10 @@ input[type="Text"] {
 	width:175px;
 }
 
+input[type="Email"] {									
+	padding:10px;
+	width:175px;
+}
 .right_content textarea {
 	width:177px;
 	padding:10px;
